--- a/test.ipynb
+++ b/test.ipynb
@@ -171,8 +171,15 @@
    "source": [
     "def load_image_into_numpy_array(image):\n",
     "  (im_width, im_height) = image.size\n",
-    "  return np.array(image.getdata()).reshape(\n",
-    "      (im_height, im_width, 3)).astype(np.uint8)"
+    "\n",
+    "  if np.array(image.getdata()).ndim == 1:\n",
+    "    new_img=np.zeros((im_height,im_width,3),dtype=np.uint8)\n",
+    "    new_img[:,:,0]= np.array(image.getdata()).reshape(im_height,im_width)\n",
+    "    new_img[:,:,1]= np.array(image.getdata()).reshape(im_height,im_width)\n",
+    "    new_img[:,:,2]= np.array(image.getdata()).reshape(im_height,im_width)\n",
+    "  else:\n",
+    "    new_img= np.array(image.getdata()).reshape( (im_height, im_width, 3)).astype(np.uint8)\n",
+    "  return new_img"
    ]
   },
   {
@@ -279,6 +286,13 @@
     "  plt.figure(figsize=IMAGE_SIZE)\n",
     "  plt.imshow(image_np)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
