update README with latest update (predict works)

--- a/test.ipynb
+++ b/test.ipynb
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "# What model to download.\n",
-    "MODEL_NAME = 'new_model'\n",
+    "MODEL_NAME = 'freezed_model'\n",
     "\n",
     "# Path to frozen detection graph. This is the actual model that is used for the object detection.\n",
     "PATH_TO_CKPT = MODEL_NAME + '/frozen_inference_graph.pb'\n",
@@ -259,7 +259,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
     "      instance_masks=output_dict.get('detection_masks'),\n",
     "      use_normalized_coordinates=True,\n",
     "      line_thickness=1,\n",
-    "      min_score_thresh=.8)\n",
+    "      min_score_thresh=.6)\n",
     "  plt.figure(figsize=IMAGE_SIZE)\n",
     "  plt.imshow(image_np)"
    ]
